v/0.2.0/_sources/examples/03_ensemble_workflow.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/03_ensemble_workflow.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_03_ensemble_workflow.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_03_ensemble_workflow.py:


Running Ensemble Inference
==========================

Simple ensemble inference workflow.

This example will demonstrate how to run a simple inference workflow to generate a
ensemble forecast using one of the built in models of Earth-2 Inference
Studio.

In this example you will learn:

- How to instantiate a built in prognostic model
- Creating a data source and IO object
- Select a perturbation method
- Running a simple built in workflow for ensembling
- Post-processing results

.. GENERATED FROM PYTHON SOURCE LINES 38-43

Set Up
------
All workflows inside Earth2Studio require constructed components to be
handed to them. In this example, we will use the built in ensemble workflow
:py:meth:`earth2studio.run.ensemble`.

.. GENERATED FROM PYTHON SOURCE LINES 45-49

.. literalinclude:: ../../earth2studio/run.py
   :language: python
   :start-after: # sphinx - ensemble start
   :end-before: # sphinx - ensemble end

.. GENERATED FROM PYTHON SOURCE LINES 51-57

We need the following:

- Prognostic Model: Use the built in FourCastNet model :py:class:`earth2studio.models.px.FCN`.
- perturbation_method: Use the Spherical Gaussian Method :py:class:`earth2studio.perturbation.SphericalGaussian`.
- Datasource: Pull data from the GFS data api :py:class:`earth2studio.data.GFS`.
- IO Backend: Save the outputs into a Zarr store :py:class:`earth2studio.io.ZarrBackend`.

.. GENERATED FROM PYTHON SOURCE LINES 59-88

.. code-block:: Python

    import os

    os.makedirs("outputs", exist_ok=True)
    from dotenv import load_dotenv

    load_dotenv()  # TODO: make common example prep function

    import numpy as np

    from earth2studio.data import GFS
    from earth2studio.io import ZarrBackend
    from earth2studio.models.px import FCN
    from earth2studio.perturbation import SphericalGaussian
    from earth2studio.run import ensemble

    # Load the default model package which downloads the check point from NGC
    package = FCN.load_default_package()
    model = FCN.load_model(package)

    # Instantiate the pertubation method
    sg = SphericalGaussian(noise_amplitude=0.15)

    # Create the data source
    data = GFS()

    # Create the IO handler, store in memory
    chunks = {"ensemble": 1, "time": 1}
    io = ZarrBackend(file_name="outputs/02_ensemble_sg.zarr", chunks=chunks)








.. GENERATED FROM PYTHON SOURCE LINES 89-98

Execute the Workflow
--------------------
With all components initialized, running the workflow is a single line of Python code.
Workflow will return the provided IO object back to the user, which can be used to
then post process. Some have additional APIs that can be handy for post-processing or
saving to file. Check the API docs for more information.

For the forecast we will predict for 10 steps (for FCN, this is 60 hours) with 8 ensemble
members which will be ran in 2 batches with batch size 4.

.. GENERATED FROM PYTHON SOURCE LINES 100-116

.. code-block:: Python


    nsteps = 10
    nensemble = 8
    batch_size = 2
    io = ensemble(
        ["2024-01-01"],
        nsteps,
        nensemble,
        model,
        data,
        io,
        sg,
        batch_size=batch_size,
        output_coords={"variable": np.array(["t2m", "tcwv"])},
    )





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    2024-07-05 22:01:00.361 | INFO     | earth2studio.run:ensemble:294 - Running ensemble inference!
    2024-07-05 22:01:00.362 | INFO     | earth2studio.run:ensemble:302 - Inference device: cuda
    2024-07-05 22:01:00.385 | DEBUG    | earth2studio.data.gfs:fetch_gfs_dataarray:149 - Fetching GFS index file: 2024-01-01 00:00:00
    Fetching GFS for 2024-01-01 00:00:00:   0%|          | 0/26 [00:00<?, ?it/s]                                                                                2024-07-05 22:01:00.694 | DEBUG    | earth2studio.data.gfs:fetch_gfs_dataarray:196 - Fetching GFS grib file for variable: u10m at 2024-01-01 00:00:00
    Fetching GFS for 2024-01-01 00:00:00:   0%|          | 0/26 [00:00<?, ?it/s]                                                                                2024-07-05 22:01:00.716 | DEBUG    | earth2studio.data.gfs:fetch_gfs_dataarray:196 - Fetching GFS grib file for variable: v10m at 2024-01-01 00:00:00
    Fetching GFS for 2024-01-01 00:00:00:   0%|          | 0/26 [00:00<?, ?it/s]                                                                                2024-07-05 22:01:00.735 | DEBUG    | earth2studio.data.gfs:fetch_gfs_dataarray:196 - Fetching GFS grib file for variable: t2m at 2024-01-01 00:00:00
    Fetching GFS for 2024-01-01 00:00:00:   0%|          | 0/26 [00:00<?, ?it/s]                                                                                2024-07-05 22:01:00.754 | DEBUG    | earth2studio.data.gfs:fetch_gfs_dataarray:196 - Fetching GFS grib file for variable: sp at 2024-01-01 00:00:00
    Fetching GFS for 2024-01-01 00:00:00:   0%|          | 0/26 [00:00<?, ?it/s]                                                                                2024-07-05 22:01:00.773 | DEBUG    | earth2studio.data.gfs:fetch_gfs_dataarray:196 - Fetching GFS grib file for variable: msl at 2024-01-01 00:00:00
    Fetching GFS for 2024-01-01 00:00:00:   0%|          | 0/26 [00:00<?, ?it/s]                                                                                2024-07-05 22:01:00.793 | DEBUG    | earth2studio.data.gfs:fetch_gfs_dataarray:196 - Fetching GFS grib file for variable: t850 at 2024-01-01 00:00:00
    Fetching GFS for 2024-01-01 00:00:00:   0%|          | 0/26 [00:00<?, ?it/s]    Fetching GFS for 2024-01-01 00:00:00:  23%|██▎       | 6/26 [00:00<00:00, 50.40it/s]                                                                                        2024-07-05 22:01:00.813 | DEBUG    | earth2studio.data.gfs:fetch_gfs_dataarray:196 - Fetching GFS grib file for variable: u1000 at 2024-01-01 00:00:00
    Fetching GFS for 2024-01-01 00:00:00:  23%|██▎       | 6/26 [00:00<00:00, 50.40it/s]                                                                                        2024-07-05 22:01:00.832 | DEBUG    | earth2studio.data.gfs:fetch_gfs_dataarray:196 - Fetching GFS grib file for variable: v1000 at 2024-01-01 00:00:00
    Fetching GFS for 2024-01-01 00:00:00:  23%|██▎       | 6/26 [00:00<00:00, 50.40it/s]                                                                                        2024-07-05 22:01:00.851 | DEBUG    | earth2studio.data.gfs:fetch_gfs_dataarray:196 - Fetching GFS grib file for variable: z1000 at 2024-01-01 00:00:00
    Fetching GFS for 2024-01-01 00:00:00:  23%|██▎       | 6/26 [00:00<00:00, 50.40it/s]                                                                                        2024-07-05 22:01:00.870 | DEBUG    | earth2studio.data.gfs:fetch_gfs_dataarray:196 - Fetching GFS grib file for variable: u850 at 2024-01-01 00:00:00
    Fetching GFS for 2024-01-01 00:00:00:  23%|██▎       | 6/26 [00:00<00:00, 50.40it/s]                                                                                        2024-07-05 22:01:00.888 | DEBUG    | earth2studio.data.gfs:fetch_gfs_dataarray:196 - Fetching GFS grib file for variable: v850 at 2024-01-01 00:00:00
    Fetching GFS for 2024-01-01 00:00:00:  23%|██▎       | 6/26 [00:00<00:00, 50.40it/s]                                                                                        2024-07-05 22:01:00.907 | DEBUG    | earth2studio.data.gfs:fetch_gfs_dataarray:196 - Fetching GFS grib file for variable: z850 at 2024-01-01 00:00:00
    Fetching GFS for 2024-01-01 00:00:00:  23%|██▎       | 6/26 [00:00<00:00, 50.40it/s]    Fetching GFS for 2024-01-01 00:00:00:  46%|████▌     | 12/26 [00:00<00:00, 51.93it/s]                                                                                         2024-07-05 22:01:00.926 | DEBUG    | earth2studio.data.gfs:fetch_gfs_dataarray:196 - Fetching GFS grib file for variable: u500 at 2024-01-01 00:00:00
    Fetching GFS for 2024-01-01 00:00:00:  46%|████▌     | 12/26 [00:00<00:00, 51.93it/s]                                                                                         2024-07-05 22:01:00.945 | DEBUG    | earth2studio.data.gfs:fetch_gfs_dataarray:196 - Fetching GFS grib file for variable: v500 at 2024-01-01 00:00:00
    Fetching GFS for 2024-01-01 00:00:00:  46%|████▌     | 12/26 [00:00<00:00, 51.93it/s]                                                                                         2024-07-05 22:01:00.963 | DEBUG    | earth2studio.data.gfs:fetch_gfs_dataarray:196 - Fetching GFS grib file for variable: z500 at 2024-01-01 00:00:00
    Fetching GFS for 2024-01-01 00:00:00:  46%|████▌     | 12/26 [00:00<00:00, 51.93it/s]                                                                                         2024-07-05 22:01:00.982 | DEBUG    | earth2studio.data.gfs:fetch_gfs_dataarray:196 - Fetching GFS grib file for variable: t500 at 2024-01-01 00:00:00
    Fetching GFS for 2024-01-01 00:00:00:  46%|████▌     | 12/26 [00:00<00:00, 51.93it/s]                                                                                         2024-07-05 22:01:01.000 | DEBUG    | earth2studio.data.gfs:fetch_gfs_dataarray:196 - Fetching GFS grib file for variable: z50 at 2024-01-01 00:00:00
    Fetching GFS for 2024-01-01 00:00:00:  46%|████▌     | 12/26 [00:00<00:00, 51.93it/s]                                                                                         2024-07-05 22:01:01.019 | DEBUG    | earth2studio.data.gfs:fetch_gfs_dataarray:196 - Fetching GFS grib file for variable: r500 at 2024-01-01 00:00:00
    Fetching GFS for 2024-01-01 00:00:00:  46%|████▌     | 12/26 [00:00<00:00, 51.93it/s]    Fetching GFS for 2024-01-01 00:00:00:  69%|██████▉   | 18/26 [00:00<00:00, 52.60it/s]                                                                                         2024-07-05 22:01:01.038 | DEBUG    | earth2studio.data.gfs:fetch_gfs_dataarray:196 - Fetching GFS grib file for variable: r850 at 2024-01-01 00:00:00
    Fetching GFS for 2024-01-01 00:00:00:  69%|██████▉   | 18/26 [00:00<00:00, 52.60it/s]                                                                                         2024-07-05 22:01:01.057 | DEBUG    | earth2studio.data.gfs:fetch_gfs_dataarray:196 - Fetching GFS grib file for variable: tcwv at 2024-01-01 00:00:00
    Fetching GFS for 2024-01-01 00:00:00:  69%|██████▉   | 18/26 [00:00<00:00, 52.60it/s]                                                                                         2024-07-05 22:01:01.076 | DEBUG    | earth2studio.data.gfs:fetch_gfs_dataarray:196 - Fetching GFS grib file for variable: u100m at 2024-01-01 00:00:00
    Fetching GFS for 2024-01-01 00:00:00:  69%|██████▉   | 18/26 [00:00<00:00, 52.60it/s]                                                                                         2024-07-05 22:01:01.095 | DEBUG    | earth2studio.data.gfs:fetch_gfs_dataarray:196 - Fetching GFS grib file for variable: v100m at 2024-01-01 00:00:00
    Fetching GFS for 2024-01-01 00:00:00:  69%|██████▉   | 18/26 [00:00<00:00, 52.60it/s]                                                                                         2024-07-05 22:01:01.113 | DEBUG    | earth2studio.data.gfs:fetch_gfs_dataarray:196 - Fetching GFS grib file for variable: u250 at 2024-01-01 00:00:00
    Fetching GFS for 2024-01-01 00:00:00:  69%|██████▉   | 18/26 [00:00<00:00, 52.60it/s]                                                                                         2024-07-05 22:01:01.132 | DEBUG    | earth2studio.data.gfs:fetch_gfs_dataarray:196 - Fetching GFS grib file for variable: v250 at 2024-01-01 00:00:00
    Fetching GFS for 2024-01-01 00:00:00:  69%|██████▉   | 18/26 [00:00<00:00, 52.60it/s]    Fetching GFS for 2024-01-01 00:00:00:  92%|█████████▏| 24/26 [00:00<00:00, 52.94it/s]                                                                                         2024-07-05 22:01:01.150 | DEBUG    | earth2studio.data.gfs:fetch_gfs_dataarray:196 - Fetching GFS grib file for variable: z250 at 2024-01-01 00:00:00
    Fetching GFS for 2024-01-01 00:00:00:  92%|█████████▏| 24/26 [00:00<00:00, 52.94it/s]                                                                                         2024-07-05 22:01:01.169 | DEBUG    | earth2studio.data.gfs:fetch_gfs_dataarray:196 - Fetching GFS grib file for variable: t250 at 2024-01-01 00:00:00
    Fetching GFS for 2024-01-01 00:00:00:  92%|█████████▏| 24/26 [00:00<00:00, 52.94it/s]    Fetching GFS for 2024-01-01 00:00:00: 100%|██████████| 26/26 [00:00<00:00, 52.64it/s]
    2024-07-05 22:01:01.248 | SUCCESS  | earth2studio.run:ensemble:315 - Fetched data from GFS
    2024-07-05 22:01:01.254 | INFO     | earth2studio.run:ensemble:337 - Starting 8 Member Ensemble Inference with             4 number of batches.
    Total Ensemble Batches:   0%|          | 0/4 [00:00<?, ?it/s]
    Running batch 0 inference:   0%|          | 0/11 [00:00<?, ?it/s]
    Running batch 0 inference:   9%|▉         | 1/11 [00:00<00:01,  6.44it/s]
    Running batch 0 inference:  18%|█▊        | 2/11 [00:00<00:03,  2.98it/s]
    Running batch 0 inference:  27%|██▋       | 3/11 [00:00<00:02,  3.18it/s]
    Running batch 0 inference:  36%|███▋      | 4/11 [00:01<00:02,  3.23it/s]
    Running batch 0 inference:  45%|████▌     | 5/11 [00:01<00:01,  3.24it/s]
    Running batch 0 inference:  55%|█████▍    | 6/11 [00:01<00:01,  3.23it/s]
    Running batch 0 inference:  64%|██████▎   | 7/11 [00:02<00:01,  3.20it/s]
    Running batch 0 inference:  73%|███████▎  | 8/11 [00:02<00:00,  3.14it/s]
    Running batch 0 inference:  82%|████████▏ | 9/11 [00:02<00:00,  3.02it/s]
    Running batch 0 inference:  91%|█████████ | 10/11 [00:03<00:00,  2.92it/s]
    Running batch 0 inference: 100%|██████████| 11/11 [00:03<00:00,  2.86it/s]
                                                                                  Total Ensemble Batches:  25%|██▌       | 1/4 [00:06<00:19,  6.38s/it]
    Running batch 2 inference:   0%|          | 0/11 [00:00<?, ?it/s]
    Running batch 2 inference:   9%|▉         | 1/11 [00:00<00:01,  7.41it/s]
    Running batch 2 inference:  18%|█▊        | 2/11 [00:00<00:01,  4.71it/s]
    Running batch 2 inference:  27%|██▋       | 3/11 [00:00<00:01,  4.17it/s]
    Running batch 2 inference:  36%|███▋      | 4/11 [00:00<00:01,  3.88it/s]
    Running batch 2 inference:  45%|████▌     | 5/11 [00:01<00:01,  3.70it/s]
    Running batch 2 inference:  55%|█████▍    | 6/11 [00:01<00:01,  3.55it/s]
    Running batch 2 inference:  64%|██████▎   | 7/11 [00:01<00:01,  3.41it/s]
    Running batch 2 inference:  73%|███████▎  | 8/11 [00:02<00:00,  3.31it/s]
    Running batch 2 inference:  82%|████████▏ | 9/11 [00:02<00:00,  3.16it/s]
    Running batch 2 inference:  91%|█████████ | 10/11 [00:02<00:00,  3.06it/s]
    Running batch 2 inference: 100%|██████████| 11/11 [00:03<00:00,  2.95it/s]
                                                                                  Total Ensemble Batches:  50%|█████     | 2/4 [00:12<00:12,  6.12s/it]
    Running batch 4 inference:   0%|          | 0/11 [00:00<?, ?it/s]
    Running batch 4 inference:   9%|▉         | 1/11 [00:00<00:01,  6.86it/s]
    Running batch 4 inference:  18%|█▊        | 2/11 [00:00<00:01,  4.53it/s]
    Running batch 4 inference:  27%|██▋       | 3/11 [00:00<00:01,  4.12it/s]
    Running batch 4 inference:  36%|███▋      | 4/11 [00:00<00:01,  3.89it/s]
    Running batch 4 inference:  45%|████▌     | 5/11 [00:01<00:01,  3.67it/s]
    Running batch 4 inference:  55%|█████▍    | 6/11 [00:01<00:01,  3.50it/s]
    Running batch 4 inference:  64%|██████▎   | 7/11 [00:01<00:01,  3.36it/s]
    Running batch 4 inference:  73%|███████▎  | 8/11 [00:02<00:00,  3.28it/s]
    Running batch 4 inference:  82%|████████▏ | 9/11 [00:02<00:00,  3.14it/s]
    Running batch 4 inference:  91%|█████████ | 10/11 [00:02<00:00,  3.02it/s]
    Running batch 4 inference: 100%|██████████| 11/11 [00:03<00:00,  2.93it/s]
                                                                                  Total Ensemble Batches:  75%|███████▌  | 3/4 [00:18<00:06,  6.05s/it]
    Running batch 6 inference:   0%|          | 0/11 [00:00<?, ?it/s]
    Running batch 6 inference:   9%|▉         | 1/11 [00:00<00:01,  7.55it/s]
    Running batch 6 inference:  18%|█▊        | 2/11 [00:00<00:01,  4.80it/s]
    Running batch 6 inference:  27%|██▋       | 3/11 [00:00<00:01,  4.27it/s]
    Running batch 6 inference:  36%|███▋      | 4/11 [00:00<00:01,  3.90it/s]
    Running batch 6 inference:  45%|████▌     | 5/11 [00:01<00:01,  3.72it/s]
    Running batch 6 inference:  55%|█████▍    | 6/11 [00:01<00:01,  3.58it/s]
    Running batch 6 inference:  64%|██████▎   | 7/11 [00:01<00:01,  3.41it/s]
    Running batch 6 inference:  73%|███████▎  | 8/11 [00:02<00:00,  3.29it/s]
    Running batch 6 inference:  82%|████████▏ | 9/11 [00:02<00:00,  3.15it/s]
    Running batch 6 inference:  91%|█████████ | 10/11 [00:02<00:00,  3.04it/s]
    Running batch 6 inference: 100%|██████████| 11/11 [00:03<00:00,  2.97it/s]
                                                                                  Total Ensemble Batches: 100%|██████████| 4/4 [00:24<00:00,  6.01s/it]    Total Ensemble Batches: 100%|██████████| 4/4 [00:24<00:00,  6.06s/it]
    2024-07-05 22:01:25.504 | SUCCESS  | earth2studio.run:ensemble:382 - Inference complete




.. GENERATED FROM PYTHON SOURCE LINES 117-123

Post Processing
---------------
The last step is to post process our results. Cartopy is a great library for plotting
fields on projections of a sphere.

Notice that the Zarr IO function has additional APIs to interact with the stored data.

.. GENERATED FROM PYTHON SOURCE LINES 125-181

.. code-block:: Python

    import cartopy.crs as ccrs
    import matplotlib.pyplot as plt

    forecast = "2024-01-01"


    def plot_(axi, data, title, cmap):
        """Convenience function for plotting pcolormesh."""
        # Plot the field using pcolormesh
        im = axi.pcolormesh(
            io["lon"][:],
            io["lat"][:],
            data,
            transform=ccrs.PlateCarree(),
            cmap=cmap,
        )
        plt.colorbar(im, ax=axi, shrink=0.6, pad=0.04)
        # Set title
        axi.set_title(title)
        # Add coastlines and gridlines
        axi.coastlines()
        axi.gridlines()


    for variable, cmap in zip(["tcwv"], ["Blues"]):
        step = 4  # lead time = 24 hrs

        plt.close("all")
        # Create a Robinson projection
        projection = ccrs.Robinson()

        # Create a figure and axes with the specified projection
        fig, (ax1, ax2, ax3) = plt.subplots(
            nrows=1, ncols=3, subplot_kw={"projection": projection}, figsize=(16, 3)
        )

        plot_(
            ax1,
            io[variable][0, 0, step],
            f"{forecast} - Lead time: {6*step}hrs - Member: {0}",
            cmap,
        )
        plot_(
            ax2,
            io[variable][1, 0, step],
            f"{forecast} - Lead time: {6*step}hrs - Member: {1}",
            cmap,
        )
        plot_(
            ax3,
            np.std(io[variable][:, 0, step], axis=0),
            f"{forecast} - Lead time: {6*step}hrs - Std",
            cmap,
        )

        plt.savefig(f"outputs/03_{forecast}_{variable}_{step}_ensemble.jpg")



.. image-sg:: /examples/images/sphx_glr_03_ensemble_workflow_001.png
   :alt: 2024-01-01 - Lead time: 24hrs - Member: 0, 2024-01-01 - Lead time: 24hrs - Member: 1, 2024-01-01 - Lead time: 24hrs - Std
   :srcset: /examples/images/sphx_glr_03_ensemble_workflow_001.png, /examples/images/sphx_glr_03_ensemble_workflow_001_2_00x.png 2.00x
   :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (1 minutes 28.838 seconds)


.. _sphx_glr_download_examples_03_ensemble_workflow.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: 03_ensemble_workflow.ipynb <03_ensemble_workflow.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: 03_ensemble_workflow.py <03_ensemble_workflow.py>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
